2018-02-16  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-952

	* src/m_surface.cc:
	- removed trailing white spaces
	- added surfaceTelsem method to compute land surface emissivities
	  using TELSEM2
	- fixed bug in surfaceFlatRvRh

	* src/m_telsem.cc:
	- added telsemSurfaceTypeLandSea WSM to produce a land/sea mask
	according to TELSEM2 data.
	- added telsem_atlasReadAscii to read a single atlas.

	* src/methods.cc:
	- added surfaceTelsem, telsemSurfaceTypeLandSea, telsem_atlasReadAscii
	WSMs

	* src/telsem.[h,cc]:
	- added some checks to avoid memory errors for invalid inputs

2018-02-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-951
	
	* 3rdparty/wigner/wigxjpf/CMakeLists.txt:

	Remove calc_float128.c and c_wrap_float128.c from sources.
	Not needed because we don't use quadmath. Fixes compilation failure
	with Clang which doesn't support __float128.

2018-02-15  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-950
	
	* 3rdparty/wigxjpf:  Moved to 3rdparty/wigner/wigxjpf. Also
	commented out Makefile reference to QUADMATH as the only difference
	from original as found at:  http://fy.chalmers.se/subatom/wigxjpf/
	
	* 3rdparty/wigner/fastwigxj:  Added. Also	commented out Makefile 
	reference to QUADMATH from original as found at:
	http://fy.chalmers.se/subatom/fastwigxj/
	
	After work by Håkan T. Johansson of Chalmers, using fastwigxj to
	compute line mixing speeds up relmat by orders of magnitude.
	What used to take 40 minutes at 20 cores now takes 4 minutes at
	a single core.  Tha activation of this code-path is still a bit
	clumsy.
	
	To activate it, type "cmake -DFASTWIGNER=X .." in your build with 
	X as a positive integer.  X is used internally to generate the 
	two files: 3rparty/wigner/fastwigxj/fasttable.3j and 
	3rparty/wigner/fastwigxj/fasttable.6j.
	It also sets a define while building ARTS so that these files
	are found.  Do not make X large as this takes up loads of 