@@ -1,3 +1,11 @@
+2018-02-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-953
+
+	* src/m_montecarlo.cc (MCRadar): There was a crash if stokes_dim
+	was < 3 (due to isnan(Ihold[2])). Changed code to handle stokes_dim>2.
+	Now also checked that stokes_dim>=2.
+
 2018-02-16  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-952
@@ -23,7 +31,7 @@
 2018-02-15  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-951
-	
+
 	* 3rdparty/wigner/wigxjpf/CMakeLists.txt:
 
 	Remove calc_float128.c and c_wrap_float128.c from sources.
@@ -33,7 +41,7 @@
 2018-02-15  Richard Larsson <ric.larsson@gmail.com>
 
 	* arts-2-3-950
-	
+
 	* 3rdparty/wigxjpf:  Moved to 3rdparty/wigner/wigxjpf. Also
 	commented out Makefile reference to QUADMATH as the only difference
 	from original as found at:  http://fy.chalmers.se/subatom/wigxjpf/
